cluster/download/seerr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: download
spec:
  selector:
    app: seerr
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
